fix hr colors for dark mode

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -75,6 +75,9 @@ html{
   a{
     color: #007bff;
   }
+  hr{
+    border-top: 1px solid rgba(228, 228, 228, .1);
+  }
   .comic-nav{
     color: #0a0e14;
   }
